--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "custom-shipping-step-by-items",
-  "vendor": "tfgroup",
+  "vendor": "thefoschini",
   "version": "0.1.0",
   "title": "Custom Checkout UI Settings",
   "description": "[TFG] custom-shipping-step-by-items app",
