feat: get appConfiguration from admin script

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@commitlint/cli": "^16.0.2",
-    "@commitlint/config-conventional": "^16.0.0"
+    "@commitlint/config-conventional": "^16.0.0",
+    "@types/jest": "^27.4.0"
   },
   "husky": {
     "hooks": {
