--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,32 @@
   "name": "custom-shipping-step-by-items",
   "vendor": "thefoschini",
   "version": "0.1.0",
-  "title": "Custom Checkout UI Settings",
+  "title": "[TFG] Custom shipping step by cart items",
   "description": "[TFG] custom-shipping-step-by-items app",
   "builders": {
     "checkout-ui-custom": "0.x"
   },
   "credentialType": "absolute",
-  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
+  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema",
+  "settingsSchema": {
+    "title": "[TFG] custom-shipping-step-by-items app",
+    "type": "object",
+    "properties": {
+      "furnitureId": {
+        "title": "Furniture ID",
+        "description": "Enter the category ID for furniture products",
+        "type": "number"
+      },
+      "tvId": {
+        "title": "TV ID",
+        "description": "Enter the category ID for television products",
+        "type": "number"
+      },
+      "simCardId": {
+        "title": "SimCard ID",
+        "description": "Enter the category ID for simCard products",
+        "type": "number"
+      }
+    }
+  }
 }
