--- a/checkout-ui-custom/package.json
+++ b/checkout-ui-custom/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "watch": "npm run build && webpack --watch",
-    "app": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
+    "app": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "dev": "rm ./checkout6-custom.js && concurrently \"vtex link\" \"npm run watch\""
   },
   "author": "Lucas Vyskubenko <lucas.vysk@vtex.com> (https://github.com/lucvysk)",
   "license": "VTEX",
