--- a/checkout-ui-custom/package.json
+++ b/checkout-ui-custom/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.0.0",
     "@babel/runtime-corejs2": "^7.0.0",
     "babel-loader": "^8.0.0",
+    "concurrently": "^7.3.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "eslint": "^7.29.0",
