--- a/checkout-ui-custom/package.json
+++ b/checkout-ui-custom/package.json
@@ -3,23 +3,27 @@
   "version": "0.1.0",
   "description": "[TFG] custom-shipping-step-by-items app",
   "main": "index.js",
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "watch": "npm run build && webpack --watch",
-    "app": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
+    "watch": "yarn build && webpack --watch",
+    "app": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "dev": "rm ./checkout6-custom.js && concurrently \"vtex link\" \"yarn watch\""
   },
   "author": "Lucas Vyskubenko <lucas.vysk@vtex.com> (https://github.com/lucvysk)",
   "license": "VTEX",
   "dependencies": {
-    "git": "^0.1.5",
-    "intl-tel-input": "^17.0.15"
+    "concurrently": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/runtime-corejs2": "^7.0.0",
     "babel-loader": "^8.0.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -27,13 +31,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "extract-loader": "^2.0.1",
     "file-loader": "^2.0.0",
-    "node-sass": "^6.0.1",
-    "postcss-cli": "^8.3.1",
-    "postcss-loader": "^6.1.0",
     "prettier": "^2.3.2",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
