--- a/checkout-ui-custom/package.json
+++ b/checkout-ui-custom/package.json
@@ -12,7 +12,8 @@
     "build": "cross-env NODE_ENV=production webpack",
     "watch": "yarn build && webpack --watch",
     "app": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "dev": "rm ./checkout6-custom.js && concurrently \"vtex link\" \"yarn watch\""
+    "dev": "rm ./checkout6-custom.js && concurrently \"vtex link\" \"yarn watch\"",
+    "lint": "eslint ./"
   },
   "author": "Lucas Vyskubenko <lucas.vysk@vtex.com> (https://github.com/lucvysk)",
   "license": "VTEX",
