--- a/checkout-ui-custom/package.json
+++ b/checkout-ui-custom/package.json
@@ -35,5 +35,8 @@
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "@sentry/browser": "^7.45.0"
+  }
 }
